new/parser/parserdata.py
'''!!! THIS FILE IS AUTOMATICALLY GENERATED - PLEASE DO NOT MODIFY !!!'''



from datatypes import Rule, EOI



##### ABSTRACT SYNTAX TREE #####



class START(Rule):
    r'''```
START -> PROGRAM
    ```'''

class PROGRAM(Rule):
    r'''```
PROGRAM -> MATHEXPR
         | MATHEXPR "\n+" PROGRAM
    ```'''

class MATHEXPR(Rule):
    r'''```
MATHEXPR -> OR
    ```'''

class OR(Rule):
    r'''```
OR -> AND "\|" OR
    | AND
    ```'''

class AND(Rule):
    r'''```
AND -> NOT "&" AND
     | NOT
    ```'''

class NOT(Rule):
    r'''```
NOT -> "~" NOT
     | COMPARISON
    ```'''

class COMPARISON(Rule):
    r'''```
COMPARISON -> LE
            | LEQ
            | GE
            | GEQ
            | EQ
            | NEQ
            | SUM
    ```'''

class LE(Rule):
    r'''```
LE -> COMPARISON "<" SUM
    ```'''

class LEQ(Rule):
    r'''```
LEQ -> COMPARISON "<=" SUM
    ```'''

class GE(Rule):
    r'''```
GE -> COMPARISON ">" SUM
    ```'''

class GEQ(Rule):
    r'''```
GEQ -> COMPARISON ">=" SUM
    ```'''

class EQ(Rule):
    r'''```
EQ -> COMPARISON "==" SUM
    ```'''

class NEQ(Rule):
    r'''```
NEQ -> COMPARISON "!=" SUM
    ```'''

class SUM(Rule):
    r'''```
SUM -> SUM "\+" TERM
     | SUM "-" TERM
     | TERM
    ```'''

class TERM(Rule):
    r'''```
TERM -> TERM "\*" FACTOR
      | TERM "/" FACTOR
      | FACTOR
    ```'''

class FACTOR(Rule):
    r'''```
FACTOR -> "-" FACTOR
        | POWER
    ```'''

class POWER(Rule):
    r'''```
POWER -> GROUP "\*\*" FACTOR
       | GROUP
    ```'''

class GROUP(Rule):
    r'''```
GROUP -> "\(" MATHEXPR "\)"
       | VALUE
    ```'''

class VALUE(Rule):
    r'''```
VALUE -> NUMBER
    ```'''

class NUMBER(Rule):
    r'''```
NUMBER -> INT
        | FLOAT
        | BOOL
    ```'''

class INT(Rule):
    r'''```
INT -> "0"
     | "[1-9]\d*"
    ```'''

class FLOAT(Rule):
    r'''```
FLOAT -> "\d*\.\d+"
    ```'''

class BOOL(Rule):
    r'''```
BOOL -> "True"
      | "False"
    ```'''


terminals = {
    r"\*",
    r"&",
    r"\n+",
    r"~",
    r"\+",
    r"-",
    r">",
    r"/",
    r"True",
    r"==",
    r"False",
    r"\(",
    r"\)",
    r"\*\*",
    r">=",
    r"<=",
    r"[1-9]\d*",
    r"0",
    r"\d*\.\d+",
    r"<",
    r"\|",
    r"!="
}



##### PARSETABLE #####



# ---{ GRAMMAR }---
# Rule 0    START -> PROGRAM
# Rule 1    PROGRAM -> MATHEXPR
# Rule 2    PROGRAM -> MATHEXPR "\n+" PROGRAM
# Rule 3    MATHEXPR -> OR
# Rule 4    OR -> AND "\|" OR
# Rule 5    OR -> AND
# Rule 6    AND -> NOT "&" AND
# Rule 7    AND -> NOT
# Rule 8    NOT -> "~" NOT
# Rule 9    NOT -> COMPARISON
# Rule 10   COMPARISON -> LE
# Rule 11   COMPARISON -> LEQ
# Rule 12   COMPARISON -> GE
# Rule 13   COMPARISON -> GEQ
# Rule 14   COMPARISON -> EQ
# Rule 15   COMPARISON -> NEQ
# Rule 16   COMPARISON -> SUM
# Rule 17   LE -> COMPARISON "<" SUM
# Rule 18   LEQ -> COMPARISON "<=" SUM
# Rule 19   GE -> COMPARISON ">" SUM
# Rule 20   GEQ -> COMPARISON ">=" SUM
# Rule 21   EQ -> COMPARISON "==" SUM
# Rule 22   NEQ -> COMPARISON "!=" SUM
# Rule 23   SUM -> SUM "\+" TERM
# Rule 24   SUM -> SUM "-" TERM
# Rule 25   SUM -> TERM
# Rule 26   TERM -> TERM "\*" FACTOR
# Rule 27   TERM -> TERM "/" FACTOR
# Rule 28   TERM -> FACTOR
# Rule 29   FACTOR -> "-" FACTOR
# Rule 30   FACTOR -> POWER
# Rule 31   POWER -> GROUP "\*\*" FACTOR
# Rule 32   POWER -> GROUP
# Rule 33   GROUP -> "\(" MATHEXPR "\)"
# Rule 34   GROUP -> VALUE
# Rule 35   VALUE -> NUMBER
# Rule 36   NUMBER -> INT
# Rule 37   NUMBER -> FLOAT
# Rule 38   NUMBER -> BOOL
# Rule 39   INT -> "0"
# Rule 40   INT -> "[1-9]\d*"
# Rule 41   FLOAT -> "\d*\.\d+"
# Rule 42   BOOL -> "True"
# Rule 43   BOOL -> "False"


    
# Parsetable constructed with 63 states.
# No conflicts found.



indentation = False
newlines = True



rules = (
    (START, 'main', 0, 1),
    (PROGRAM, 'main', 0, 1),
    (PROGRAM, 'main', 1, 3),
    (MATHEXPR, 'math_infix', 0, 1),
    (OR, 'math_infix', 0, 3),
    (OR, 'math_infix', 1, 1),
    (AND, 'math_infix', 0, 3),
    (AND, 'math_infix', 1, 1),
    (NOT, 'math_infix', 0, 2),
    (NOT, 'math_infix', 1, 1),
    (COMPARISON, 'math_infix', 0, 1),
    (COMPARISON, 'math_infix', 1, 1),
    (COMPARISON, 'math_infix', 2, 1),
    (COMPARISON, 'math_infix', 3, 1),
    (COMPARISON, 'math_infix', 4, 1),
    (COMPARISON, 'math_infix', 5, 1),
    (COMPARISON, 'math_infix', 6, 1),
    (LE, 'math_infix', 0, 3),
    (LEQ, 'math_infix', 0, 3),
    (GE, 'math_infix', 0, 3),
    (GEQ, 'math_infix', 0, 3),
    (EQ, 'math_infix', 0, 3),
    (NEQ, 'math_infix', 0, 3),
    (SUM, 'math_infix', 0, 3),
    (SUM, 'math_infix', 1, 3),
    (SUM, 'math_infix', 2, 1),
    (TERM, 'math_infix', 0, 3),
    (TERM, 'math_infix', 1, 3),
    (TERM, 'math_infix', 2, 1),
    (FACTOR, 'math_infix', 0, 2),
    (FACTOR, 'math_infix', 1, 1),
    (POWER, 'math_infix', 0, 3),
    (POWER, 'math_infix', 1, 1),
    (GROUP, 'math_infix', 0, 3),
    (GROUP, 'math_infix', 1, 1),
    (VALUE, 'math_infix', 0, 1),
    (NUMBER, 'datatypes_numeric', 0, 1),
    (NUMBER, 'datatypes_numeric', 1, 1),
    (NUMBER, 'datatypes_numeric', 2, 1),
    (INT, 'datatypes_numeric', 0, 1),
    (INT, 'datatypes_numeric', 1, 1),
    (FLOAT, 'datatypes_numeric', 0, 1),
    (BOOL, 'datatypes_numeric', 0, 1),
    (BOOL, 'datatypes_numeric', 1, 1)
)



table = {
    0 : {
        PROGRAM : [('G', 1)],
        MATHEXPR : [('G', 2)],
        OR : [('G', 5)],
        AND : [('G', 6)],
        NOT : [('G', 9)],
        COMPARISON : [('G', 12)],
        SUM : [('G', 36)],
        TERM : [('G', 44)],
        FACTOR : [('G', 43)],
        POWER : [('G', 19)],
        GROUP : [('G', 20)],
        VALUE : [('G', 23)],
        NUMBER : [('G', 24)],
        BOOL : [('G', 25)],
        r"False" : [('S', 26)],
        r"True" : [('S', 27)],
        FLOAT : [('G', 28)],
        r"\d*\.\d+" : [('S', 29)],
        INT : [('G', 30)],
        r"[1-9]\d*" : [('S', 31)],
        r"0" : [('S', 32)],
        r"\(" : [('S', 33)],
        r"-" : [('S', 41)],
        NEQ : [('G', 45)],
        EQ : [('G', 46)],
        GEQ : [('G', 47)],
        GE : [('G', 48)],
        LEQ : [('G', 49)],
        LE : [('G', 50)],
        r"~" : [('S', 51)]
    },
    1 : {
        EOI : [('A', True)]
    },
    2 : {
        EOI : [('R', 1)],
        r"\n+" : [('S', 3)]
    },
    3 : {
        PROGRAM : [('G', 4)],
        MATHEXPR : [('G', 2)],
        OR : [('G', 5)],
        AND : [('G', 6)],
        NOT : [('G', 9)],
        COMPARISON : [('G', 12)],
        SUM : [('G', 36)],
        TERM : [('G', 44)],
        FACTOR : [('G', 43)],
        POWER : [('G', 19)],
        GROUP : [('G', 20)],
        VALUE : [('G', 23)],
        NUMBER : [('G', 24)],
        BOOL : [('G', 25)],
        r"False" : [('S', 26)],
        r"True" : [('S', 27)],
        FLOAT : [('G', 28)],
        r"\d*\.\d+" : [('S', 29)],
        INT : [('G', 30)],
        r"[1-9]\d*" : [('S', 31)],
        r"0" : [('S', 32)],
        r"\(" : [('S', 33)],
        r"-" : [('S', 41)],
        NEQ : [('G', 45)],
        EQ : [('G', 46)],
        GEQ : [('G', 47)],
        GE : [('G', 48)],
        LEQ : [('G', 49)],
        LE : [('G', 50)],
        r"~" : [('S', 51)]
    },
    4 : {
        EOI : [('R', 2)]
    },
    5 : {
        EOI : [('R', 3)],
        r"\n+" : [('R', 3)],
        r"\)" : [('R', 3)]
    },
    6 : {
        EOI : [('R', 5)],
        r"\n+" : [('R', 5)],
        r"\)" : [('R', 5)],
        r"\|" : [('S', 7)]
    },
    7 : {
        OR : [('G', 8)],
        AND : [('G', 6)],
        NOT : [('G', 9)],
        COMPARISON : [('G', 12)],
        SUM : [('G', 36)],
        TERM : [('G', 44)],
        FACTOR : [('G', 43)],
        POWER : [('G', 19)],
        GROUP : [('G', 20)],
        VALUE : [('G', 23)],
        NUMBER : [('G', 24)],
        BOOL : [('G', 25)],
        r"False" : [('S', 26)],
        r"True" : [('S', 27)],
        FLOAT : [('G', 28)],
        r"\d*\.\d+" : [('S', 29)],
        INT : [('G', 30)],
        r"[1-9]\d*" : [('S', 31)],
        r"0" : [('S', 32)],
        r"\(" : [('S', 33)],
        r"-" : [('S', 41)],
        NEQ : [('G', 45)],
        EQ : [('G', 46)],
        GEQ : [('G', 47)],
        GE : [('G', 48)],
        LEQ : [('G', 49)],
        LE : [('G', 50)],
        r"~" : [('S', 51)]
    },
    8 : {
        EOI : [('R', 4)],
        r"\n+" : [('R', 4)],
        r"\)" : [('R', 4)]
    },
    9 : {
        EOI : [('R', 7)],
        r"\|" : [('R', 7)],
        r"\n+" : [('R', 7)],
        r"\)" : [('R', 7)],
        r"&" : [('S', 10)]
    },
    10 : {
        AND : [('G', 11)],
        NOT : [('G', 9)],
        COMPARISON : [('G', 12)],
        SUM : [('G', 36)],
        TERM : [('G', 44)],
        FACTOR : [('G', 43)],
        POWER : [('G', 19)],
        GROUP : [('G', 20)],
        VALUE : [('G', 23)],
        NUMBER : [('G', 24)],
        BOOL : [('G', 25)],
        r"False" : [('S', 26)],
        r"True" : [('S', 27)],
        FLOAT : [('G', 28)],
        r"\d*\.\d+" : [('S', 29)],
        INT : [('G', 30)],
        r"[1-9]\d*" : [('S', 31)],
        r"0" : [('S', 32)],
        r"\(" : [('S', 33)],
        r"-" : [('S', 41)],
        NEQ : [('G', 45)],
        EQ : [('G', 46)],
        GEQ : [('G', 47)],
        GE : [('G', 48)],
        LEQ : [('G', 49)],
        LE : [('G', 50)],
        r"~" : [('S', 51)]
    },
    11 : {
        EOI : [('R', 6)],
        r"\|" : [('R', 6)],
        r"\n+" : [('R', 6)],
        r"\)" : [('R', 6)]
    },
    12 : {
        EOI : [('R', 9)],
        r"\n+" : [('R', 9)],
        r"\)" : [('R', 9)],
        r"\|" : [('R', 9)],
        r"&" : [('R', 9)],
        r"<" : [('S', 13)],
        r"<=" : [('S', 53)],
        r">" : [('S', 55)],
        r">=" : [('S', 57)],
        r"==" : [('S', 59)],
        r"!=" : [('S', 61)]
    },
    13 : {
        SUM : [('G', 14)],
        TERM : [('G', 44)],
        FACTOR : [('G', 43)],
        POWER : [('G', 19)],
        GROUP : [('G', 20)],
        VALUE : [('G', 23)],
        NUMBER : [('G', 24)],
        BOOL : [('G', 25)],
        r"False" : [('S', 26)],
        r"True" : [('S', 27)],
        FLOAT : [('G', 28)],
        r"\d*\.\d+" : [('S', 29)],
        INT : [('G', 30)],
        r"[1-9]\d*" : [('S', 31)],
        r"0" : [('S', 32)],
        r"\(" : [('S', 33)],
        r"-" : [('S', 41)]
    },
    14 : {
        r">" : [('R', 17)],
        EOI : [('R', 17)],
        r"==" : [('R', 17)],
        r"\)" : [('R', 17)],
        r">=" : [('R', 17)],
        r"&" : [('R', 17)],
        r"<=" : [('R', 17)],
        r"\n+" : [('R', 17)],
        r"<" : [('R', 17)],
        r"\|" : [('R', 17)],
        r"!=" : [('R', 17)],
        r"\+" : [('S', 15)],
        r"-" : [('S', 37)]
    },
    15 : {
        TERM : [('G', 16)],
        FACTOR : [('G', 43)],
        POWER : [('G', 19)],
        GROUP : [('G', 20)],
        VALUE : [('G', 23)],
        NUMBER : [('G', 24)],
        BOOL : [('G', 25)],
        r"False" : [('S', 26)],
        r"True" : [('S', 27)],
        FLOAT : [('G', 28)],
        r"\d*\.\d+" : [('S', 29)],
        INT : [('G', 30)],
        r"[1-9]\d*" : [('S', 31)],
        r"0" : [('S', 32)],
        r"\(" : [('S', 33)],
        r"-" : [('S', 41)]
    },
    16 : {
        r">" : [('R', 23)],
        EOI : [('R', 23)],
        r"==" : [('R', 23)],
        r"\)" : [('R', 23)],
        r">=" : [('R', 23)],
        r"<=" : [('R', 23)],
        r"&" : [('R', 23)],
        r"\n+" : [('R', 23)],
        r"\+" : [('R', 23)],
        r"-" : [('R', 23)],
        r"<" : [('R', 23)],
        r"\|" : [('R', 23)],
        r"!=" : [('R', 23)],
        r"\*" : [('S', 17)],
        r"/" : [('S', 39)]
    },
    17 : {
        FACTOR : [('G', 18)],
        POWER : [('G', 19)],
        GROUP : [('G', 20)],
        VALUE : [('G', 23)],
        NUMBER : [('G', 24)],
        BOOL : [('G', 25)],
        r"False" : [('S', 26)],
        r"True" : [('S', 27)],
        FLOAT : [('G', 28)],
        r"\d*\.\d+" : [('S', 29)],
        INT : [('G', 30)],
        r"[1-9]\d*" : [('S', 31)],
        r"0" : [('S', 32)],
        r"\(" : [('S', 33)],
        r"-" : [('S', 41)]
    },
    18 : {
        r">" : [('R', 26)],
        r"/" : [('R', 26)],
        EOI : [('R', 26)],
        r"==" : [('R', 26)],
        r"\*" : [('R', 26)],
        r"\)" : [('R', 26)],
        r">=" : [('R', 26)],
        r"<=" : [('R', 26)],
        r"&" : [('R', 26)],
        r"\n+" : [('R', 26)],
        r"\+" : [('R', 26)],
        r"-" : [('R', 26)],
        r"<" : [('R', 26)],
        r"\|" : [('R', 26)],
        r"!=" : [('R', 26)]
    },
    19 : {
        r">" : [('R', 30)],
        r"/" : [('R', 30)],
        EOI : [('R', 30)],
        r"==" : [('R', 30)],
        r"\*" : [('R', 30)],
        r"\)" : [('R', 30)],
        r">=" : [('R', 30)],
        r"&" : [('R', 30)],
        r"<=" : [('R', 30)],
        r"\n+" : [('R', 30)],
        r"\+" : [('R', 30)],
        r"-" : [('R', 30)],
        r"<" : [('R', 30)],
        r"\|" : [('R', 30)],
        r"!=" : [('R', 30)]
    },
    20 : {
        r">" : [('R', 32)],
        r"/" : [('R', 32)],
        EOI : [('R', 32)],
        r"==" : [('R', 32)],
        r"\*" : [('R', 32)],
        r"\)" : [('R', 32)],
        r">=" : [('R', 32)],
        r"&" : [('R', 32)],
        r"<=" : [('R', 32)],
        r"\n+" : [('R', 32)],
        r"\+" : [('R', 32)],
        r"-" : [('R', 32)],
        r"<" : [('R', 32)],
        r"\|" : [('R', 32)],
        r"!=" : [('R', 32)],
        r"\*\*" : [('S', 21)]
    },
    21 : {
        FACTOR : [('G', 22)],
        POWER : [('G', 19)],
        GROUP : [('G', 20)],
        VALUE : [('G', 23)],
        NUMBER : [('G', 24)],
        BOOL : [('G', 25)],
        r"False" : [('S', 26)],
        r"True" : [('S', 27)],
        FLOAT : [('G', 28)],
        r"\d*\.\d+" : [('S', 29)],
        INT : [('G', 30)],
        r"[1-9]\d*" : [('S', 31)],
        r"0" : [('S', 32)],
        r"\(" : [('S', 33)],
        r"-" : [('S', 41)]
    },
    22 : {
        r">" : [('R', 31)],
        r"/" : [('R', 31)],
        EOI : [('R', 31)],
        r"==" : [('R', 31)],
        r"\*" : [('R', 31)],
        r"\)" : [('R', 31)],
        r">=" : [('R', 31)],
        r"&" : [('R', 31)],
        r"<=" : [('R', 31)],
        r"\n+" : [('R', 31)],
        r"\+" : [('R', 31)],
        r"-" : [('R', 31)],
        r"<" : [('R', 31)],
        r"\|" : [('R', 31)],
        r"!=" : [('R', 31)]
    },
    23 : {
        r">" : [('R', 34)],
        r"/" : [('R', 34)],
        EOI : [('R', 34)],
        r"==" : [('R', 34)],
        r"\*" : [('R', 34)],
        r"\)" : [('R', 34)],
        r"\*\*" : [('R', 34)],
        r">=" : [('R', 34)],
        r"&" : [('R', 34)],
        r"<=" : [('R', 34)],
        r"\n+" : [('R', 34)],
        r"\+" : [('R', 34)],
        r"-" : [('R', 34)],
        r"<" : [('R', 34)],
        r"\|" : [('R', 34)],
        r"!=" : [('R', 34)]
    },
    24 : {
        r">" : [('R', 35)],
        r"/" : [('R', 35)],
        EOI : [('R', 35)],
        r"==" : [('R', 35)],
        r"\*" : [('R', 35)],
        r"\)" : [('R', 35)],
        r"\*\*" : [('R', 35)],
        r">=" : [('R', 35)],
        r"&" : [('R', 35)],
        r"<=" : [('R', 35)],
        r"\n+" : [('R', 35)],
        r"\+" : [('R', 35)],
        r"-" : [('R', 35)],
        r"<" : [('R', 35)],
        r"\|" : [('R', 35)],
        r"!=" : [('R', 35)]
    },
    25 : {
        r">" : [('R', 38)],
        r"/" : [('R', 38)],
        EOI : [('R', 38)],
        r"==" : [('R', 38)],
        r"\*" : [('R', 38)],
        r"\)" : [('R', 38)],
        r"\*\*" : [('R', 38)],
        r">=" : [('R', 38)],
        r"&" : [('R', 38)],
        r"<=" : [('R', 38)],
        r"\n+" : [('R', 38)],
        r"\+" : [('R', 38)],
        r"-" : [('R', 38)],
        r"<" : [('R', 38)],
        r"\|" : [('R', 38)],
        r"!=" : [('R', 38)]
    },
    26 : {
        r">" : [('R', 43)],
        r"/" : [('R', 43)],
        EOI : [('R', 43)],
        r"==" : [('R', 43)],
        r"\*" : [('R', 43)],
        r"\)" : [('R', 43)],
        r"\*\*" : [('R', 43)],
        r">=" : [('R', 43)],
        r"&" : [('R', 43)],
        r"<=" : [('R', 43)],
        r"\n+" : [('R', 43)],
        r"\+" : [('R', 43)],
        r"-" : [('R', 43)],
        r"<" : [('R', 43)],
        r"\|" : [('R', 43)],
        r"!=" : [('R', 43)]
    },
    27 : {
        r">" : [('R', 42)],
        r"/" : [('R', 42)],
        EOI : [('R', 42)],
        r"==" : [('R', 42)],
        r"\*" : [('R', 42)],
        r"\)" : [('R', 42)],
        r"\*\*" : [('R', 42)],
        r">=" : [('R', 42)],
        r"&" : [('R', 42)],
        r"<=" : [('R', 42)],
        r"\n+" : [('R', 42)],
        r"\+" : [('R', 42)],
        r"-" : [('R', 42)],
        r"<" : [('R', 42)],
        r"\|" : [('R', 42)],
        r"!=" : [('R', 42)]
    },
    28 : {
        r">" : [('R', 37)],
        r"/" : [('R', 37)],
        EOI : [('R', 37)],
        r"==" : [('R', 37)],
        r"\*" : [('R', 37)],
        r"\)" : [('R', 37)],
        r"\*\*" : [('R', 37)],
        r">=" : [('R', 37)],
        r"&" : [('R', 37)],
        r"<=" : [('R', 37)],
        r"\n+" : [('R', 37)],
        r"\+" : [('R', 37)],
        r"-" : [('R', 37)],
        r"<" : [('R', 37)],
        r"\|" : [('R', 37)],
        r"!=" : [('R', 37)]
    },
    29 : {
        r">" : [('R', 41)],
        r"/" : [('R', 41)],
        EOI : [('R', 41)],
        r"==" : [('R', 41)],
        r"\*" : [('R', 41)],
        r"\)" : [('R', 41)],
        r"\*\*" : [('R', 41)],
        r">=" : [('R', 41)],
        r"&" : [('R', 41)],
        r"<=" : [('R', 41)],
        r"\n+" : [('R', 41)],
        r"\+" : [('R', 41)],
        r"-" : [('R', 41)],
        r"<" : [('R', 41)],
        r"\|" : [('R', 41)],
        r"!=" : [('R', 41)]
    },
    30 : {
        r">" : [('R', 36)],
        r"/" : [('R', 36)],
        EOI : [('R', 36)],
        r"==" : [('R', 36)],
        r"\*" : [('R', 36)],
        r"\)" : [('R', 36)],
        r"\*\*" : [('R', 36)],
        r">=" : [('R', 36)],
        r"&" : [('R', 36)],
        r"<=" : [('R', 36)],
        r"\n+" : [('R', 36)],
        r"\+" : [('R', 36)],
        r"-" : [('R', 36)],
        r"<" : [('R', 36)],
        r"\|" : [('R', 36)],
        r"!=" : [('R', 36)]
    },
    31 : {
        r">" : [('R', 40)],
        r"/" : [('R', 40)],
        EOI : [('R', 40)],
        r"==" : [('R', 40)],
        r"\*" : [('R', 40)],
        r"\)" : [('R', 40)],
        r"\*\*" : [('R', 40)],
        r">=" : [('R', 40)],
        r"&" : [('R', 40)],
        r"<=" : [('R', 40)],
        r"\n+" : [('R', 40)],
        r"\+" : [('R', 40)],
        r"-" : [('R', 40)],
        r"<" : [('R', 40)],
        r"\|" : [('R', 40)],
        r"!=" : [('R', 40)]
    },
    32 : {
        r">" : [('R', 39)],
        r"/" : [('R', 39)],
        EOI : [('R', 39)],
        r"==" : [('R', 39)],
        r"\*" : [('R', 39)],
        r"\)" : [('R', 39)],
        r"\*\*" : [('R', 39)],
        r">=" : [('R', 39)],
        r"&" : [('R', 39)],
        r"<=" : [('R', 39)],
        r"\n+" : [('R', 39)],
        r"\+" : [('R', 39)],
        r"-" : [('R', 39)],
        r"<" : [('R', 39)],
        r"\|" : [('R', 39)],
        r"!=" : [('R', 39)]
    },
    33 : {
        MATHEXPR : [('G', 34)],
        OR : [('G', 5)],
        AND : [('G', 6)],
        NOT : [('G', 9)],
        COMPARISON : [('G', 12)],
        SUM : [('G', 36)],
        TERM : [('G', 44)],
        FACTOR : [('G', 43)],
        POWER : [('G', 19)],
        GROUP : [('G', 20)],
        VALUE : [('G', 23)],
        NUMBER : [('G', 24)],
        BOOL : [('G', 25)],
        r"False" : [('S', 26)],
        r"True" : [('S', 27)],
        FLOAT : [('G', 28)],
        r"\d*\.\d+" : [('S', 29)],
        INT : [('G', 30)],
        r"[1-9]\d*" : [('S', 31)],
        r"0" : [('S', 32)],
        r"\(" : [('S', 33)],
        r"-" : [('S', 41)],
        NEQ : [('G', 45)],
        EQ : [('G', 46)],
        GEQ : [('G', 47)],
        GE : [('G', 48)],
        LEQ : [('G', 49)],
        LE : [('G', 50)],
        r"~" : [('S', 51)]
    },
    34 : {
        r"\)" : [('S', 35)]
    },
    35 : {
        r">" : [('R', 33)],
        r"/" : [('R', 33)],
        EOI : [('R', 33)],
        r"==" : [('R', 33)],
        r"\*" : [('R', 33)],
        r"\)" : [('R', 33)],
        r"\*\*" : [('R', 33)],
        r">=" : [('R', 33)],
        r"&" : [('R', 33)],
        r"<=" : [('R', 33)],
        r"\n+" : [('R', 33)],
        r"\+" : [('R', 33)],
        r"-" : [('R', 33)],
        r"<" : [('R', 33)],
        r"\|" : [('R', 33)],
        r"!=" : [('R', 33)]
    },
    36 : {
        r">" : [('R', 16)],
        EOI : [('R', 16)],
        r"==" : [('R', 16)],
        r"\)" : [('R', 16)],
        r">=" : [('R', 16)],
        r"&" : [('R', 16)],
        r"<=" : [('R', 16)],
        r"\n+" : [('R', 16)],
        r"<" : [('R', 16)],
        r"\|" : [('R', 16)],
        r"!=" : [('R', 16)],
        r"\+" : [('S', 15)],
        r"-" : [('S', 37)]
    },
    37 : {
        TERM : [('G', 38)],
        FACTOR : [('G', 43)],
        POWER : [('G', 19)],
        GROUP : [('G', 20)],
        VALUE : [('G', 23)],
        NUMBER : [('G', 24)],
        BOOL : [('G', 25)],
        r"False" : [('S', 26)],
        r"True" : [('S', 27)],
        FLOAT : [('G', 28)],
        r"\d*\.\d+" : [('S', 29)],
        INT : [('G', 30)],
        r"[1-9]\d*" : [('S', 31)],
        r"0" : [('S', 32)],
        r"\(" : [('S', 33)],
        r"-" : [('S', 41)]
    },
    38 : {
        r">" : [('R', 24)],
        EOI : [('R', 24)],
        r"==" : [('R', 24)],
        r"\)" : [('R', 24)],
        r">=" : [('R', 24)],
        r"&" : [('R', 24)],
        r"<=" : [('R', 24)],
        r"\n+" : [('R', 24)],
        r"\+" : [('R', 24)],
        r"-" : [('R', 24)],
        r"<" : [('R', 24)],
        r"\|" : [('R', 24)],
        r"!=" : [('R', 24)],
        r"\*" : [('S', 17)],
        r"/" : [('S', 39)]
    },
    39 : {
        FACTOR : [('G', 40)],
        POWER : [('G', 19)],
        GROUP : [('G', 20)],
        VALUE : [('G', 23)],
        NUMBER : [('G', 24)],
        BOOL : [('G', 25)],
        r"False" : [('S', 26)],
        r"True" : [('S', 27)],
        FLOAT : [('G', 28)],
        r"\d*\.\d+" : [('S', 29)],
        INT : [('G', 30)],
        r"[1-9]\d*" : [('S', 31)],
        r"0" : [('S', 32)],
        r"\(" : [('S', 33)],
        r"-" : [('S', 41)]
    },
    40 : {
        r">" : [('R', 27)],
        r"/" : [('R', 27)],
        EOI : [('R', 27)],
        r"==" : [('R', 27)],
        r"\*" : [('R', 27)],
        r"\)" : [('R', 27)],
        r">=" : [('R', 27)],
        r"&" : [('R', 27)],
        r"<=" : [('R', 27)],
        r"\n+" : [('R', 27)],
        r"\+" : [('R', 27)],
        r"-" : [('R', 27)],
        r"<" : [('R', 27)],
        r"\|" : [('R', 27)],
        r"!=" : [('R', 27)]
    },
    41 : {
        FACTOR : [('G', 42)],
        POWER : [('G', 19)],
        GROUP : [('G', 20)],
        VALUE : [('G', 23)],
        NUMBER : [('G', 24)],
        BOOL : [('G', 25)],
        r"False" : [('S', 26)],
        r"True" : [('S', 27)],
        FLOAT : [('G', 28)],
        r"\d*\.\d+" : [('S', 29)],
        INT : [('G', 30)],
        r"[1-9]\d*" : [('S', 31)],
        r"0" : [('S', 32)],
        r"\(" : [('S', 33)],
        r"-" : [('S', 41)]
    },
    42 : {
        r">" : [('R', 29)],
        r"/" : [('R', 29)],
        EOI : [('R', 29)],
        r"==" : [('R', 29)],
        r"\*" : [('R', 29)],
        r"\)" : [('R', 29)],
        r">=" : [('R', 29)],
        r"&" : [('R', 29)],
        r"<=" : [('R', 29)],
        r"\n+" : [('R', 29)],
        r"\+" : [('R', 29)],
        r"-" : [('R', 29)],
        r"<" : [('R', 29)],
        r"\|" : [('R', 29)],
        r"!=" : [('R', 29)]
    },
    43 : {
        r">" : [('R', 28)],
        r"/" : [('R', 28)],
        EOI : [('R', 28)],
        r"==" : [('R', 28)],
        r"\*" : [('R', 28)],
        r"\)" : [('R', 28)],
        r">=" : [('R', 28)],
        r"&" : [('R', 28)],
        r"<=" : [('R', 28)],
        r"\n+" : [('R', 28)],
        r"\+" : [('R', 28)],
        r"-" : [('R', 28)],
        r"<" : [('R', 28)],
        r"\|" : [('R', 28)],
        r"!=" : [('R', 28)]
    },
    44 : {
        r">" : [('R', 25)],
        EOI : [('R', 25)],
        r"==" : [('R', 25)],
        r"\)" : [('R', 25)],
        r">=" : [('R', 25)],
        r"&" : [('R', 25)],
        r"<=" : [('R', 25)],
        r"\n+" : [('R', 25)],
        r"\+" : [('R', 25)],
        r"-" : [('R', 25)],
        r"<" : [('R', 25)],
        r"\|" : [('R', 25)],
        r"!=" : [('R', 25)],
        r"\*" : [('S', 17)],
        r"/" : [('S', 39)]
    },
    45 : {
        r">" : [('R', 15)],
        EOI : [('R', 15)],
        r"==" : [('R', 15)],
        r"\)" : [('R', 15)],
        r">=" : [('R', 15)],
        r"&" : [('R', 15)],
        r"<=" : [('R', 15)],
        r"\n+" : [('R', 15)],
        r"<" : [('R', 15)],
        r"\|" : [('R', 15)],
        r"!=" : [('R', 15)]
    },
    46 : {
        r">" : [('R', 14)],
        EOI : [('R', 14)],
        r"==" : [('R', 14)],
        r"\)" : [('R', 14)],
        r">=" : [('R', 14)],
        r"&" : [('R', 14)],
        r"<=" : [('R', 14)],
        r"\n+" : [('R', 14)],
        r"<" : [('R', 14)],
        r"\|" : [('R', 14)],
        r"!=" : [('R', 14)]
    },
    47 : {
        r">" : [('R', 13)],
        EOI : [('R', 13)],
        r"==" : [('R', 13)],
        r"\)" : [('R', 13)],
        r">=" : [('R', 13)],
        r"&" : [('R', 13)],
        r"<=" : [('R', 13)],
        r"\n+" : [('R', 13)],
        r"<" : [('R', 13)],
        r"\|" : [('R', 13)],
        r"!=" : [('R', 13)]
    },
    48 : {
        r">" : [('R', 12)],
        EOI : [('R', 12)],
        r"==" : [('R', 12)],
        r"\)" : [('R', 12)],
        r">=" : [('R', 12)],
        r"&" : [('R', 12)],
        r"<=" : [('R', 12)],
        r"\n+" : [('R', 12)],
        r"<" : [('R', 12)],
        r"\|" : [('R', 12)],
        r"!=" : [('R', 12)]
    },
    49 : {
        r">" : [('R', 11)],
        EOI : [('R', 11)],
        r"==" : [('R', 11)],
        r"\)" : [('R', 11)],
        r">=" : [('R', 11)],
